type: feat | fixed delte task, and menu to align right to not be cut off by another card

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,6 +17,9 @@
 .card-shadow:hover{
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
+.task-wrap{
+  margin-top: 10px;
+}
 
 .rotate180{
   -webkit-animation: rotateY 1s 1 linear;
